feat: gloss headline/detail split, aurora label context, feature tests
Split briefing and aurora gloss from single `gloss` field into
`glossHeadline` (7-word cell label) + `glossDetail` (2-3 sentence
explanation). Claude prompt now requests JSON format with graceful
fallback to truncated headline on parse failure. Cells show headline
with InfoTip for detail; drill-downs show detail below event header.

Append "aurora" to non-QUIET alert labels (Minor → Minor aurora, etc.)
via `formatAlertLevel()` helper at all three render sites.

Replace `any()` in verify() calls with ArgumentCaptor + content
assertions. Add feature-protecting tests: JSON format in system prompt,
glossDetail survival through reassembly, STANDDOWN both-fields-null,
InfoTip rendering, alert label formatting, drill-down detail display.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>